New version: PyVistaCompat v0.1.1

--- a/P/PyVistaCompat/Versions.toml
+++ b/P/PyVistaCompat/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "803ebc4d6bcbf18dbda1a668b6c61a5f85e4310d"
+
+["0.1.1"]
+git-tree-sha1 = "ece0f4f26b7c92eee05b990f91919bfee136fcf1"
