--- a/jll/M/MuesliMaterials_jll/Compat.toml
+++ b/jll/M/MuesliMaterials_jll/Compat.toml
@@ -2,5 +2,10 @@
 Artifacts = ["0.0.0", "1"]
 JLLWrappers = "1.2.0 - 1"
 Libdl = ["0.0.0", "1"]
+
+["1 - 1.16.0"]
 julia = "1.9.0 - 1"
 libblastrampoline_jll = "5.4.0 - 5"
+
+["1.16.1 - 1"]
+julia = "1.10.0 - 1"
