--- a/jll/M/MuesliMaterials_jll/Deps.toml
+++ b/jll/M/MuesliMaterials_jll/Deps.toml
@@ -2,4 +2,9 @@
 Artifacts = "56f22d72-fd6d-98f1-02f0-08ddc0907c33"
 JLLWrappers = "692b3bcd-3c85-4b1f-b108-f13ce0eb3210"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
+
+["1 - 1.16.0"]
 libblastrampoline_jll = "8e850b90-86db-534c-a0d3-1478176c7d93"
+
+["1.16.1 - 1"]
+OpenBLAS32_jll = "656ef2d0-ae68-5445-9ca0-591084a874a2"
