--- a/jll/M/MuesliMaterials_jll/Versions.toml
+++ b/jll/M/MuesliMaterials_jll/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "a2e12a806157129c390fc1789892897c35a0c801"
 
 ["1.16.2+0"]
 git-tree-sha1 = "a3a7c041b59f84af2f9879ad688b06cef70d0857"
+
+["1.16.3+0"]
+git-tree-sha1 = "2266dde05d8716f62df173212f60cf1d412357e2"
