--- a/jll/M/MuesliMaterialsWrapper_jll/Compat.toml
+++ b/jll/M/MuesliMaterialsWrapper_jll/Compat.toml
@@ -2,10 +2,16 @@
 Artifacts = ["0.0.0", "1"]
 JLLWrappers = "1.2.0 - 1"
 Libdl = ["0.0.0", "1"]
-julia = "1.10.0 - 1"
 
 ["0 - 0.1"]
 libcxxwrap_julia_jll = "0.14"
 
+["0 - 0.10"]
+julia = "1.10.0 - 1"
+
 ["0.10 - 0"]
 libcxxwrap_julia_jll = "0.13.3 - 0.13"
+
+["0.11 - 0"]
+MuesliMaterials_jll = "1.16.3 - 1"
+julia = "1.10 - 1.11"
