--- a/jll/M/MuesliMaterialsWrapper_jll/Versions.toml
+++ b/jll/M/MuesliMaterialsWrapper_jll/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "9dedcf158cb344225c7b1679bb0c27f220bf39f4"
 
 ["0.11.0+0"]
 git-tree-sha1 = "f65a6a686762b962052fec51291578c0f02c67ba"
+
+["0.11.1+0"]
+git-tree-sha1 = "bdcb257fcf4f75cd8bc44206052a9699fc87d843"
